feat: 业务缓存设备基类添加属性(缓存文件最大长度)

--- a/src/adapter/ThingsGateway.Plugin.Mqtt/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.Mqtt/Locales/en-US.json
@@ -24,6 +24,7 @@
     "BusinessInterval": "BusinessInterval",
     "IsAllVariable": "IsAllVariable",
     "QueueMaxCount": "QueueMaxCount",
+    "CacheFileMaxLength": "CacheFileMaxLength(mb)",
     "SplitSize": "SplitSize",
     "CacheEnable": "CacheEnable"
   },
@@ -47,6 +48,7 @@
     "BusinessInterval": "BusinessInterval",
     "IsAllVariable": "IsAllVariable",
     "QueueMaxCount": "QueueMaxCount",
+    "CacheFileMaxLength": "CacheFileMaxLength(mb)",
     "SplitSize": "SplitSize",
     "CacheEnable": "CacheEnable"
   }
