--- a/src/adapter/ThingsGateway.Plugin.RabbitMQ/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.RabbitMQ/Locales/en-US.json
@@ -21,6 +21,7 @@
     "BusinessInterval": "BusinessInterval",
     "IsAllVariable": "IsAllVariable",
     "QueueMaxCount": "QueueMaxCount",
+    "CacheFileMaxLength": "CacheFileMaxLength(mb)",
     "SplitSize": "SplitSize",
     "CacheEnable": "CacheEnable"
   }
