--- a/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/Locales/en-US.json
@@ -7,6 +7,7 @@
     "BusinessInterval": "BusinessInterval",
     "IsAllVariable": "IsAllVariable",
     "QueueMaxCount": "QueueMaxCount",
+    "CacheFileMaxLength": "CacheFileMaxLength(mb)",
     "SplitSize": "SplitSize",
     "CacheEnable": "CacheEnable"
   }
