--- a/src/adapter/ThingsGateway.Plugin.QuestDB/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.QuestDB/Locales/en-US.json
@@ -6,6 +6,7 @@
     "BusinessInterval": "BusinessInterval",
     "IsAllVariable": "IsAllVariable",
     "QueueMaxCount": "QueueMaxCount",
+    "CacheFileMaxLength": "CacheFileMaxLength(mb)",
     "SplitSize": "SplitSize",
     "CacheEnable": "CacheEnable"
   },
