--- a/src/adapter/ThingsGateway.Plugin.SqlDB/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.SqlDB/Locales/en-US.json
@@ -11,6 +11,7 @@
     "BusinessInterval": "BusinessInterval",
     "IsAllVariable": "IsAllVariable",
     "QueueMaxCount": "QueueMaxCount",
+    "CacheFileMaxLength": "CacheFileMaxLength(mb)",
     "SplitSize": "SplitSize",
     "CacheEnable": "CacheEnable"
   },
