--- a/doc/docs/3.mdx
+++ b/doc/docs/3.mdx
@@ -19,7 +19,7 @@ import Highlight from '@site/src/components/Highlight.js';
 
 ## 一、说明
 
-**ThingsGateway** 基于NET6、7、8,默认开发IDE为VS2022(**17.8版本以上**),安装VS时需勾选ASP.NET类别.
+**ThingsGateway** 基于NET6、8,默认开发IDE为VS2022(**17.8版本以上**),安装VS时需勾选ASP.NET类别.
 
 <img src={require("@site/static/img/docs/vs2022install.png").default} />
 
@@ -42,7 +42,7 @@ import Highlight from '@site/src/components/Highlight.js';
 
 <img src={require("@site/static/img/docs/生成解决方案.png").default} />
 
-2、 设置ThingsGateway.Web.Entry为启动项目，开始调试或开始执行
+2、 设置ThingsGateway.Server为启动项目，开始调试或开始执行
 <img src={require("@site/static/img/docs/设置启动项目.png").default} />
 <img src={require("@site/static/img/docs/开始执行.png").default} />
 
@@ -54,7 +54,7 @@ import Highlight from '@site/src/components/Highlight.js';
 
 :::tip 提示
 
-测试环境下，账密会自动填充为超级管理员账号，默认账户：**superAdmin**，密码：**111111**
+测试环境下，账密会自动填充为超级管理员账号，默认账户：**SuperAdmin**，密码：**111111**
 
 :::  
 
