refactor: 优化网关模块页面的使用体验

--- a/src/ThingsGateway.Gateway.Application/Locales/en-US.json
+++ b/src/ThingsGateway.Gateway.Application/Locales/en-US.json
@@ -1,4 +1,10 @@
 ﻿{
+  "ThingsGateway.Gateway.Application.VariableSearchInput": {
+    "Name": "Name",
+    "DeviceId": "Device",
+    "RegisterAddress": "RegisterAddress"
+  },
+
   "ThingsGateway.Gateway.Application.CollectDeviceRuntime": {
     "SourceVariableCount": "SourceVariableCount",
     "MethodVariableCount": "MethodVariableCount",
