feat: 添加当前进程占用内存显示

--- a/src/ThingsGateway.Admin.Razor/Locales/en-US.json
+++ b/src/ThingsGateway.Admin.Razor/Locales/en-US.json
@@ -6,6 +6,7 @@
     "CpuUsage": "CPU Usage",
     "AvailableMemory": "Available Memory",
     "TotalMemory": "Total Memory",
+    "WorkingSet": "WorkingSet",
     "MemoryUsage": "Memory Usage",
     "AvailableDisk": "Available Disk",
     "TotalDisk": "Total Disk",
