feat: 添加批量编辑方法

--- a/src/ThingsGateway.Razor/Locales/en-US.json
+++ b/src/ThingsGateway.Razor/Locales/en-US.json
@@ -2,6 +2,8 @@
   "ThingsGateway.Razor._Imports": {
     "Add": "Add",
     "Remove": "Remove",
+    "BatchEdit": "BacthEdit",
+    "Edit": "Edit",
     "Close": "Close",
     "True": "Yes",
     "False": "No",
