feat(TouchSocket): 调整代码

--- a/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/en-US.json
@@ -17,6 +17,7 @@
     "DataIdNotSame": "Returned data identification does not comply with the rules",
     "BaudRateError": "Unsupported baud rate {0}",
     "CountError": "Number of parameters written does not meet address requirements",
+    "DataIdError": "Variable Address error",
     "Error1": "Other errors",
     "Error2": "Excessive number of rates",
     "Error3": "Excessive number of daily time periods",
