--- a/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/zh-CN.json
+++ b/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/zh-CN.json
@@ -9,6 +9,7 @@
   },
 
   "ThingsGateway.Foundation.Dlt645.DltResource": {
+
     "AddressDes": "数据标识地址\n\n查看附带文档或者相关资料，下面列举一些常见的数据标识地址\n\n地址                       说明\n-----------------------------------------\n02010100    A相电压\n02020100    A相电流\n02030000    瞬时总有功功率\n00000000    (当前)组合有功总电能\n00010000    (当前)正向有功总电能",
     "SumError": "和校验错误",
     "StationNotSame": "站号不一致",
@@ -17,6 +18,7 @@
     "DataIdNotSame": "返回数据标识不符合规则",
     "BaudRateError": "不支持此波特率 {0}",
     "CountError": "写入参数数量不符合地址要求",
+    "DataIdError": "变量寄存器地址错误",
     "Error1": "其他错误",
     "Error2": "费率数超",
     "Error3": "日时段数超",
