fix: 变量上传属性删除按钮丢失

--- a/src/ThingsGateway.Gateway.Application/Locales/en-US.json
+++ b/src/ThingsGateway.Gateway.Application/Locales/en-US.json
@@ -322,11 +322,11 @@
   "ThingsGateway.Gateway.Application.Variable": {
     "AddressOrOtherMethodNotNull": "Variable address or special method cannot be empty at the same time",
     "SaveVariable": "Add/Modify Variable",
-    "CopyDevice": "Copy Variable",
-    "DeleteDevice": "Copy Variable",
-    "ClearDevice": "Clear Variable",
-    "ExportDevice": "Export Variable",
-    "ImportDevice": "Import Variable",
+    "CopyVariable": "Copy Variable",
+    "DeleteVariable": "Copy Variable",
+    "ClearVariable": "Clear Variable",
+    "ExportVariable": "Export Variable",
+    "ImportVariable": "Import Variable",
     "NotNull": "{0} does not exist",
     "DeviceNotNull": "Device name does not exist",
     "VariableNotNull": "Variable name does not exist",
