--- a/src/ThingsGateway.Gateway.Razor/Locales/zh-CN.json
+++ b/src/ThingsGateway.Gateway.Razor/Locales/zh-CN.json
@@ -21,7 +21,33 @@
     "FullScreenButton": "全屏",
     "UserCenter": "个人中心",
     "ChoiceModule": "切换模块",
-    "GiteePostTitleText": "代码提交推送通知"
+    "GiteePostTitleText": "代码提交推送通知",
+
+    "系统首页": "系统首页",
+    "权限管理": "权限管理",
+    "用户管理": "用户管理",
+    "角色管理": "角色管理",
+    "菜单管理": "菜单管理",
+    "系统运维": "系统运维",
+    "系统配置": "系统配置",
+    "字典管理": "字典管理",
+    "操作日志": "操作日志",
+    "会话管理": "会话管理",
+    "硬件信息": "硬件信息",
+    "网关管理": "网关管理",
+    "插件管理": "插件管理",
+    "插件调试": "插件调试",
+    "通道管理": "通道管理",
+    "采集设备": "采集设备",
+    "业务设备": "业务设备",
+    "变量管理": "变量管理",
+    "网关状态": "网关状态",
+    "设备状态": "设备状态",
+    "实时数据": "实时数据",
+    "实时报警": "实时报警",
+    "网关日志": "网关日志",
+    "后台日志": "后台日志",
+    "RPC日志": "RPC日志"
   },
   "ThingsGateway.Debug.AdapterDebugBase": {
     "WriteSuccess": "写入成功",
