--- a/src/ThingsGateway.Admin.Razor/Locales/en-US.json
+++ b/src/ThingsGateway.Admin.Razor/Locales/en-US.json
@@ -41,6 +41,7 @@
   },
 
   "ThingsGateway.Admin.Razor.MainLayout": {
+    "About": "About",
     "FullScreenButton": "Full Screen",
     "UserCenter": "User Center",
     "ChoiceModule": "Switch Module",
