--- a/src/ThingsGateway.Gateway.Razor/Locales/en-US.json
+++ b/src/ThingsGateway.Gateway.Razor/Locales/en-US.json
@@ -27,6 +27,7 @@
     "WriteValue": "Value"
   },
   "ThingsGateway.Gateway.Razor.MainLayout": {
+    "About": "About",
     "FullScreenButton": "Full Screen",
     "UserCenter": "User Center",
     "ChoiceModule": "Switch Module",
