--- a/src/debugs/ThingsGateway.Debug.Rcl/Locales/zh-CN.json
+++ b/src/debugs/ThingsGateway.Debug.Rcl/Locales/zh-CN.json
@@ -71,6 +71,7 @@
   },
 
   "ThingsGateway.Debug.MainLayout": {
-    "FullScreenButton": "全屏"
+    "FullScreenButton": "全屏",
+    "About": "关于"
   }
 }
