--- a/src/ThingsGateway.Razor/Locales/zh-CN.json
+++ b/src/ThingsGateway.Razor/Locales/zh-CN.json
@@ -34,7 +34,11 @@
   "ThingsGateway.Razor.ThemeToggle": {
     "ThemeToggle": "夜间/白天"
   },
-
+  "ThingsGateway.Razor.About": {
+    "Docs": "文档",
+    "Community": "社区",
+    "QQGroup": "QQ群"
+  },
   "ThingsGateway.Razor.BlazorReconnector": {
     "Reconnecting1": "重连中...",
     "Reconnecting2": "正在尝试重新连接服务器",
