--- a/src/adapter/ThingsGateway.Plugin.Dlt645/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.Dlt645/Locales/en-US.json
@@ -4,6 +4,7 @@
     "OperCode": "OperCode",
     "Password": "Password",
     "Station": "DefaultStation",
+    "DtuId": "DefaultDtuId",
 
     "HeartbeatHexString": "HeartbeatHexString",
     "EndianType": "EndianType",
