--- a/src/adapter/ThingsGateway.Plugin.Modbus/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.Modbus/Locales/en-US.json
@@ -3,6 +3,7 @@
     "ModbusType": "ProtocolType",
     "HeartbeatHexString": "HeartbeatHexString",
     "Station": "DefaultStation",
+    "DtuId": "DefaultDtuId",
     "EndianType": "EndianType",
     "IsStringReverseByteWord": "StringReverseByteWord",
     "CheckClearTime": "CheckClearTime",
