--- a/src/adapter/ThingsGateway.Plugin.Modbus/Locales/zh-CN.json
+++ b/src/adapter/ThingsGateway.Plugin.Modbus/Locales/zh-CN.json
@@ -3,6 +3,7 @@
     "ModbusType": "协议类型",
     "HeartbeatHexString": "心跳验证(HexString)",
     "Station": "默认站号",
+    "DtuId": "默认DtuId",
     "EndianType": "解析规则",
     "IsStringReverseByteWord": "字符串反转",
     "CheckClearTime": "客户端连接滑动过期时间",
