dcos: 更新大小端配置方式

--- a/doc/docs/104.mdx
+++ b/doc/docs/104.mdx
@@ -65,19 +65,19 @@ import Highlight from '@site/src/components/Highlight.js';
 
 4字节转换格式
 
-DATA=ABCD;
+DATA=Big;
 
 举例：
 
-DATA=ABCD; ，代表大端格式，其中
+DATA=Big; ，代表大端格式，其中
 
-ABCD=>Big-Endian;
+Big=>Big-Endian;
 
-BADC=>Big-Endian Byte Swap;
+BigSwap=>Big-Endian Byte Swap;
 
-CDAB=>Little-Endian Byte Swap;
+LittleSwap=>Little-Endian Byte Swap;
 
-DCBA=>Little-Endian
+Little=>Little-Endian
 
 字符串长度：
 
