--- a/doc/docs/202.mdx
+++ b/doc/docs/202.mdx
@@ -27,7 +27,7 @@ Dlt645Master作为主站，主动采集Dlt645协议的设备
 | 连接超时时间         | 建立通讯链路的超时时间                | 3000|
 | 发送延时时间         | 在发送请求前的延时时间               | 0|
 | 组包缓存超时         | 返回分包时的分包间隔超时时间              | 1000 |
-| 默认解析顺序         | 4个字节以上的数据解析，可设置为ABCD/BADC/CDBA/DCBA,默认ABCD , **变量可单独配置**|ABCD：Big-Endian<br></br>BADC：Big-Endian Byte Swap<br></br>CDAB：Little-Endian Byte Swap<br></br>DCBA：Little-Endian |
+| 默认解析顺序         | 4个字节以上的数据解析，可设置为BigSwap/LittleSwap/Big/Little,默认Little , **变量可单独配置**| |
 | 默认地址         | 电表地址，12个字符              |  |
 | 密码         | 协议写入所需密码              | Flase |
 | 操作员代码         | 协议写入所需操作员代码              | Flase |
