feat: 支持modbus服务端模拟dtu设备

--- a/src/adapter/ThingsGateway.Foundation.Modbus/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Foundation.Modbus/Locales/en-US.json
@@ -21,6 +21,10 @@
     "IsWriteMemory": "IsWriteMemory",
     "MaxClientCount": "MaxClientCount",
 
+    "DtuId": "DtuId",
+    "HeartbeatTime": "HeartbeatTime",
+    "HeartbeatHexString": "HeartbeatHexString",
+
     "CacheTimeout": "CacheTimeout",
     "SendDelayTime": "SendDelayTime",
     "EndianType": "EndianType",
