--- a/src/adapter/ThingsGateway.Plugin.Modbus/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.Modbus/Locales/en-US.json
@@ -32,6 +32,10 @@
     "MulStation": "MultipleStations",
     "MaxClientCount": "MaxClientCount",
 
+    "DtuId": "DtuId",
+    "HeartbeatTime": "HeartbeatTime",
+    "HeartbeatHexString": "HeartbeatHexString",
+
     "Timeout": "Timeout",
     "ConnectTimeout": "ConnectTimeout",
     "SendDelayTime": "SendDelayTime",
