--- a/src/adapter/ThingsGateway.Plugin.Dlt645/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.Dlt645/Locales/en-US.json
@@ -7,7 +7,7 @@
     "DtuId": "DefaultDtuId",
 
     "HeartbeatHexString": "HeartbeatHexString",
-    "EndianType": "EndianType",
+    "DataFormat": "DataFormat",
     "IsStringReverseByteWord": "StringReverseByteWord",
     "CheckClearTime": "CheckClearTime",
     "Timeout": "Timeout",
