--- a/src/adapter/ThingsGateway.Plugin.SiemensS7/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.SiemensS7/Locales/en-US.json
@@ -5,7 +5,7 @@
     "LocalTSAP": "LocalTSAP",
     "Slot": "Slot",
 
-    "EndianType": "EndianType",
+    "DataFormat": "DataFormat",
     "IsStringReverseByteWord": "StringReverseByteWord",
     "CheckClearTime": "CheckClearTime",
     "Timeout": "Timeout",
