--- a/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/en-US.json
@@ -10,7 +10,7 @@
 
     "CacheTimeout": "CacheTimeout",
     "SendDelayTime": "SendDelayTime",
-    "EndianType": "EndianType",
+    "DataFormat": "DataFormat",
     "Timeout": "Timeout",
     "ConnectTimeout": "ConnectTimeout",
     "IsStringReverseByteWord": "IsStringReverseByteWord"
