--- a/src/adapter/ThingsGateway.Plugin.Dlt645/Locales/zh-CN.json
+++ b/src/adapter/ThingsGateway.Plugin.Dlt645/Locales/zh-CN.json
@@ -7,7 +7,7 @@
     "DtuId": "默认DtuId",
 
     "HeartbeatHexString": "心跳验证(HexString)",
-    "EndianType": "解析规则",
+    "DataFormat": "解析规则",
     "IsStringReverseByteWord": "字符串反转",
     "CheckClearTime": "客户端连接滑动过期时间",
     "Timeout": "读写超时时间",
