--- a/src/adapter/ThingsGateway.Plugin.SiemensS7/Locales/zh-CN.json
+++ b/src/adapter/ThingsGateway.Plugin.SiemensS7/Locales/zh-CN.json
@@ -5,7 +5,7 @@
     "LocalTSAP": "本地TSAP",
     "Slot": "槽号",
 
-    "EndianType": "解析规则",
+    "DataFormat": "解析规则",
     "IsStringReverseByteWord": "字符串反转",
     "CheckClearTime": "客户端连接滑动过期时间",
     "Timeout": "读写超时时间",
