Revert "dcos: 更新大小端配置方式"
This reverts commit 6a1f1ebf9d5283689c58ae59606cffdc5d16da9b.

--- a/doc/docs/104.mdx
+++ b/doc/docs/104.mdx
@@ -65,19 +65,19 @@ import Highlight from '@site/src/components/Highlight.js';
 
 4字节转换格式
 
-DATA=Big;
+DATA=ABCD;
 
 举例：
 
-DATA=Big; ，代表大端格式，其中
+DATA=ABCD; ，代表大端格式，其中
 
-Big=>Big-Endian;
+ABCD=>Big-Endian;
 
-BigSwap=>Big-Endian Byte Swap;
+BADC=>Big-Endian Byte Swap;
 
-LittleSwap=>Little-Endian Byte Swap;
+CDAB=>Little-Endian Byte Swap;
 
-Little=>Little-Endian
+DCBA=>Little-Endian
 
 字符串长度：
 
