refactor: 优化debug软件体验

--- a/src/ThingsGateway.Gateway.Application/Locales/en-US.json
+++ b/src/ThingsGateway.Gateway.Application/Locales/en-US.json
@@ -326,6 +326,7 @@
     "ImportNullError": "Unable to recognize",
     "NotOther": "Not supporting other channel types",
     "Connect": "Connect",
+    "Confim": "Confim",
     "Disconnect": "Disconnect",
     "Channel": "Channel"
   },
