--- a/src/debugs/ThingsGateway.Debug.Rcl/Locales/en-US.json
+++ b/src/debugs/ThingsGateway.Debug.Rcl/Locales/en-US.json
@@ -30,6 +30,7 @@
     "ImportNullError": "Unable to recognize",
     "NotOther": "Not supporting other channel types",
     "Connect": "Connect",
+    "Confim": "Confim",
     "Disconnect": "Disconnect",
     "Channel": "Channel"
   },
