--- a/src/ThingsGateway.Gateway.Application/Locales/zh-CN.json
+++ b/src/ThingsGateway.Gateway.Application/Locales/zh-CN.json
@@ -383,7 +383,7 @@
 
     "NotOther": "不支持其他通道类型",
     "Connect": "连接",
-    "Confim": "确认",
+    "Confim": "创建",
     "Disconnect": "断开",
     "Channel": "通道"
   },
