--- a/src/debugs/ThingsGateway.Debug.Rcl/Locales/zh-CN.json
+++ b/src/debugs/ThingsGateway.Debug.Rcl/Locales/zh-CN.json
@@ -36,7 +36,7 @@
 
     "NotOther": "不支持其他通道类型",
     "Connect": "连接",
-    "Confim": "确认",
+    "Confim": "创建",
     "Disconnect": "断开",
     "Channel": "通道"
   },
